Add fuctions to make syscalls

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ description = "xenia"
 license = "Apache-2.0 WITH LLVM-exception"
 
 [dependencies]
+linux-raw-sys = { version = "0.6.4", default-features = false, features = ["general", "system", "no_std"] }
