Add a lot more syscalls

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ description = "xenia"
 license = "Apache-2.0 WITH LLVM-exception"
 
 [dependencies]
-linux-raw-sys = { version = "0.6.4", default-features = false, features = ["general", "system", "no_std"] }
+bitflags = "2.5.0"
+linux-raw-sys = { version = "0.6.4", default-features = false, features = ["errno", "general", "system", "no_std"] }
