Configure xenia-utils manifest

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,6 +1,13 @@
 [package]
 name = "xenia-utils"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2024"
+description = "xenia"
+license = "Apache-2.0 WITH LLVM-exception"
+
+[features]
+default = ["std"]
+std = ["xenia/std"]
 
 [dependencies]
+xenia = { version = "0.0.3", path = "..", default-features = false }
