--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.0.4"
 edition = "2024"
 description = "xenia"
 license = "Apache-2.0 WITH LLVM-exception"
+include = ["src/**/*.rs", "README.md", "LICENSE"]
 
 [features]
 default = ["std"]
